==> peterliu2/FreeRTOS/FreeRTOS/Demo/MSP430X_MSP430FR5969_LaunchPad_IAR_CCS/Full_Demo/serial.c <==
/*
    FreeRTOS V9.0.0rc1 - Copyright (C) 2016 Real Time Engineers Ltd.
    All rights reserved

    VISIT http://www.FreeRTOS.org TO ENSURE YOU ARE USING THE LATEST VERSION.

    This file is part of the FreeRTOS distribution.

    FreeRTOS is free software; you can redistribute it and/or modify it under
    the terms of the GNU General Public License (version 2) as published by the
    Free Software Foundation >>>> AND MODIFIED BY <<<< the FreeRTOS exception.

    ***************************************************************************
    >>!   NOTE: The modification to the GPL is included to allow you to     !<<
    >>!   distribute a combined work that includes FreeRTOS without being   !<<
    >>!   obliged to provide the source code for proprietary components     !<<
    >>!   outside of the FreeRTOS kernel.                                   !<<
    ***************************************************************************

    FreeRTOS is distributed in the hope that it will be useful, but WITHOUT ANY
    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
    FOR A PARTICULAR PURPOSE.  Full license text is available on the following
    link: http://www.freertos.org/a00114.html

    ***************************************************************************
     *                                                                       *
     *    FreeRTOS provides completely free yet professionally developed,    *
     *    robust, strictly quality controlled, supported, and cross          *
     *    platform software that is more than just the market leader, it     *
     *    is the industry's de facto standard.                               *
     *                                                                       *
     *    Help yourself get started quickly while simultaneously helping     *
     *    to support the FreeRTOS project by purchasing a FreeRTOS           *
     *    tutorial book, reference manual, or both:                          *
     *    http://www.FreeRTOS.org/Documentation                              *
     *                                                                       *
    ***************************************************************************

    http://www.FreeRTOS.org/FAQHelp.html - Having a problem?  Start by reading
    the FAQ page "My application does not run, what could be wrong?".  Have you
    defined configASSERT()?

    http://www.FreeRTOS.org/support - In return for receiving this top quality
    embedded software for free we request you assist our global community by
    participating in the support forum.

    http://www.FreeRTOS.org/training - Investing in training allows your team to
    be as productive as possible as early as possible.  Now you can receive
    FreeRTOS training directly from Richard Barry, CEO of Real Time Engineers
    Ltd, and the world's leading authority on the world's leading RTOS.

    http://www.FreeRTOS.org/plus - A selection of FreeRTOS ecosystem products,
    including FreeRTOS+Trace - an indispensable productivity tool, a DOS
    compatible FAT file system, and our tiny thread aware UDP/IP stack.

    http://www.FreeRTOS.org/labs - Where new FreeRTOS products go to incubate.
    Come and try FreeRTOS+TCP, our new open source TCP/IP stack for FreeRTOS.

    http://www.OpenRTOS.com - Real Time Engineers ltd. license FreeRTOS to High
    Integrity Systems ltd. to sell under the OpenRTOS brand.  Low cost OpenRTOS
    licenses offer ticketed support, indemnification and commercial middleware.

    http://www.SafeRTOS.com - High Integrity Systems also provide a safety
    engineered and independently SIL3 certified version for use in safety and
    mission critical applications that require provable dependability.

    1 tab == 4 spaces!
*/


/* BASIC INTERRUPT DRIVEN SERIAL PORT DRIVER.
 *
 * This is not a proper UART driver.  It only supports one port, and is not
 * intended to show an efficient implementation as queues are used to pass
 * individual characters one at a time!  This is ok for a slow interface, such
 * as a command line interface (which this driver is used for), but is too
 * inefficient for higher bandwidth applications.
 */

/* Standard includes. */
#include <stdlib.h>

/* Scheduler includes. */
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"

/* Demo application includes. */
#include "serial.h"

/* TI includes. */
#include "driverlib.h"

/* Misc. constants. */
#define serNO_BLOCK				( ( TickType_t ) 0 )

/* The queue used to hold received characters. */
static QueueHandle_t xRxedChars;

/* The queue used to hold characters waiting transmission. */
static QueueHandle_t xCharsForTx;

/*-----------------------------------------------------------*/

xComPortHandle xSerialPortInitMinimal( unsigned long ulWantedBaud, unsigned portBASE_TYPE uxQueueLength )
{
    unsigned long ulBaudRateCount;

    /* Initialise the hardware. */

    /* Generate the baud rate constants for the wanted baud rate. */
    ulBaudRateCount = configCPU_CLOCK_HZ / ulWantedBaud;

    portENTER_CRITICAL();
    {
        /* Create the queues used by the com test task. */
        xRxedChars = xQueueCreate( uxQueueLength, ( UBaseType_t ) sizeof( signed char ) );
        xCharsForTx = xQueueCreate( uxQueueLength, ( UBaseType_t ) sizeof( signed char ) );

        /* Reset UART. */
        UCA0CTL1 |= UCSWRST;

        /* Use SMCLK. */
        UCA0CTL1 = UCSSEL0 | UCSSEL1;

        /* Setup baud rate low byte. */
        UCA0BR0 = ( unsigned char ) ( ulBaudRateCount & ( unsigned long ) 0xff );

        /* Setup baud rate high byte. */
        ulBaudRateCount >>= 8UL;
        UCA0BR1 = ( unsigned char ) ( ulBaudRateCount & ( unsigned long ) 0xff );

        /* Enable interrupts. */
        UCA0IE |= UCRXIE;

        /* Take out of reset. */
        UCA0CTL1 &= ~UCSWRST;
    }
    portEXIT_CRITICAL();

    /* Note the comments at the top of this file about this not being a generic
    UART driver. */
    return NULL;
}
/*-----------------------------------------------------------*/

signed portBASE_TYPE xSerialGetChar( xComPortHandle pxPort, signed char *pcRxedChar, TickType_t xBlockTime )
{
    /* Get the next character from the buffer.  Return false if no characters
    are available, or arrive before xBlockTime expires. */
    if( xQueueReceive( xRxedChars, pcRxedChar, xBlockTime ) ) {
        return pdTRUE;
    } else {
        return pdFALSE;
    }
}
/*-----------------------------------------------------------*/

signed portBASE_TYPE xSerialPutChar( xComPortHandle pxPort, signed char cOutChar, TickType_t xBlockTime )
{
    BaseType_t xReturn;

    /* Send the next character to the queue of characters waiting transmission,
    then enable the UART Tx interrupt, just in case UART transmission has already
    completed and switched itself off. */
    xReturn = xQueueSend( xCharsForTx, &cOutChar, xBlockTime );
    UCA0IE |= UCTXIE;

    return xReturn;
}
/*-----------------------------------------------------------*/

void vSerialPutString( xComPortHandle pxPort, const signed char * const pcString, unsigned short usStringLength )
{
    UBaseType_t uxChar;
    const TickType_t xMaxBlockTime = pdMS_TO_TICKS( 100 );

    /* The driver only supports one port so the pxPort parameter is not used. */
    ( void ) pxPort;

    for( uxChar = 0; uxChar < usStringLength; uxChar++ ) {
        if( xQueueSend( xCharsForTx, &( pcString[ uxChar ] ), xMaxBlockTime ) == pdFALSE ) {
            break;
        } else {
            UCA0IE |= UCTXIE;
        }
    }
}
/*-----------------------------------------------------------*/

/* The implementation of this interrupt is provided to demonstrate the use
of queues from inside an interrupt service routine.  It is *not* intended to
be an efficient interrupt implementation.  A real application should make use
of the DMA.  Or, as a minimum, transmission and reception could use a simple
RAM ring buffer, and synchronise with a task using a semaphore when a complete
message has been received or transmitted. */
#pragma vector=USCI_A0_VECTOR
__interrupt void prvUSCI_A0_ISR( void )
{
    signed char cChar;
    BaseType_t xHigherPriorityTaskWoken = pdFALSE;

    while( ( UCA0IFG & UCRXIFG ) != 0 ) {
        /* Get the character from the UART and post it on the queue of Rxed
        characters. */
        cChar = UCA0RXBUF;
        xQueueSendFromISR( xRxedChars, &cChar, &xHigherPriorityTaskWoken );
    }

    /* If there is a Tx interrupt pending and the tx interrupts are enabled. */
    if( ( UCA0IFG & UCTXIFG ) != 0 ) {
        /* The previous character has been transmitted.  See if there are any
        further characters waiting transmission. */
        if( xQueueReceiveFromISR( xCharsForTx, &cChar, &xHigherPriorityTaskWoken ) == pdTRUE ) {
            /* There was another character queued - transmit it now. */
            UCA0TXBUF = cChar;
        } else {
            /* There were no other characters to transmit - disable the Tx
            interrupt. */
            UCA0IE &= ~UCTXIE;
        }
    }

    __bic_SR_register_on_exit( SCG1 + SCG0 + OSCOFF + CPUOFF );

    /* If writing to a queue caused a task to unblock, and the unblocked task
    has a priority equal to or above the task that this interrupt interrupted,
    then lHigherPriorityTaskWoken will have been set to pdTRUE internally within
    xQueuesendFromISR(), and portEND_SWITCHING_ISR() will ensure that this
    interrupt returns directly to the higher priority unblocked task.

    THIS MUST BE THE LAST THING DONE IN THE ISR. */
    portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
}
